--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,16 @@
+:root {
+    --orange: #E76F51;
+    --white: #fff;
+    --white-grey-text: #D2D2D2;
+    --dark-text: #3B3735;
+}
+
 html {
     box-sizing: border-box;
     /* font-size can be with percent and specify size that mean in percent font can be change with browser setting fontsize if user
                  want to see text larg or small size but if specify font size it can not be change with browser changed */
-    /* font-size: 62.5%; */
-    font-size: 10px;
+    font-size: 62.5%;
+    /* font-size: 10px; */
 }
 *,*:after,*:before{
     box-sizing: inherit;
@@ -29,49 +36,8 @@ p {
     font-size: 2rem;
 }
 
-/*
 
-container
 
-*/
-
-.container {
-    width: 100%;
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-    margin-right: auto;
-    margin-left: auto;
-}
-@media (min-width: 576px) {
-    .container {
-        width: 54rem;
-    }
-}
-@media (min-width: 768px) {
-    .container {
-        width: 72rem;
-    }
-}
-@media (min-width: 992px) {
-    .container {
-        width: 96rem;
-    }
-}
-@media (min-width: 1200px) {
-    .container {
-        width: 114rem;
-    }
-}
-
-@media (min-width: 1400px) {
-    .container {
-        width: 137rem;
-    }
-}
-
-.content {
-   
-}
 
 
 /*
@@ -101,56 +67,233 @@ a {
     background: linear-gradient(rgba(59, 55, 53, 0.5), rgba(59, 55, 53, 0.5)), url(../image/header-bg.png);
     background-position: center;
     background-size: cover;
+    min-height: 55rem;
+    border-bottom-left-radius: 10rem;
+    border-bottom-right-radius: 10rem;
 }
 
 .nav {
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2.5rem 0;
 }
-.app-logo {
+ .nav__wrapper {
+    display: flex;
+    align-items: center;
+ }
 
+.app-logo {
+    display: block;
+    width: 5.5rem;
+    height: 5.5rem;
+    margin-right: 4rem;
 }
 .app-log__img {
-
+    width: 100%;
+    height: 100%;
 }
 .menu {
     display: none;
 
 }
-.menu__item {
 
+.menu__item {
+    margin-right: 1.5rem;
 }
 .menu__link {
-
+    color: var(--white-grey-text);
+    transition: color 100ms ease-in;
+    -webkit-transition: color 100ms ease-in;
+    -moz-transition: color 100ms ease-in;
+    -ms-transition: color 100ms ease-in;
+    -o-transition: color 100ms ease-in;
 }
+
+.menu__link:hover {
+    color: var(--white);
+}
+
+.menu__link--active {
+    color: var(--white);
+    position: relative;
+    z-index: 1;
+}
+
+.menu__link--active::before {
+    content: ' ';
+    position: absolute;
+    top: 7px;
+    width: 4rem;
+    height: 0.3rem;
+    border-radius: 10rem;
+    background-color: var(--orange);
+    -webkit-border-radius: 10rem;
+    -moz-border-radius: 10rem;
+    -ms-border-radius: 10rem;
+    -o-border-radius: 10rem;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    z-index: -1;
+    right:0;
+    left: 0;
+    margin: 0 auto;
+}
+
 .nav-menu {
-    display: none;
+    position: fixed;
+    top: 0;
+    left: -25rem;
+    bottom: 0;
+    width: 22rem;
+    background-color: rgb(75, 75, 75);
+    padding: 2.5rem;
+    transition: all 250ms ease-in-out;
+    -webkit-transition: all 250ms ease-in-out;
+    -moz-transition: all 250ms ease-in-out;
+    -ms-transition: all 250ms ease-in-out;
+    -o-transition: all 250ms ease-in-out;
 }
+.nav-menu--open {
+    left:0;
+}
+
 .mobile-menu {
+    margin-bottom: 2.5rem;
+}
+.mobile-menu__item {
+    margin-bottom: 1rem;
+}
+
+.mobile-menu__link{
+    color: var(--white);
 
 }
-.nav-menu__links {
 
+.nav-menu__links {
+    display: flex;
 }
 .nav-menu__link {
+    color: var(--white);
+    border: 1px solid var(--white);
+    display: block;
+    padding: 1rem;
+    flex-grow: 1;
+    text-align: center;
 
 }
 .nav-menu__link--border {
 
  }
+
 .header__links {
     display: none;
 }
+
 .header__link {
+    color: var(--white);
+    font-family: "Roboto Medium";
+    margin-left: 2.5rem;
 
 }
+
 .header__link--border {
-
+    border: 1px solid var(--white);
+    padding: 1rem 2.5rem;
+    border-radius: 10rem;
+    -webkit-border-radius: 10rem;
+    -moz-border-radius: 10rem;
+    -ms-border-radius: 10rem;
+    -o-border-radius: 10rem;
+    transition: all 100ms ease-in;
+    -webkit-transition: all 100ms ease-in;
+    -moz-transition: all 100ms ease-in;
+    -ms-transition: all 100ms ease-in;
+    -o-transition: all 100ms ease-in;
 }
+
+.header__link--border:hover {
+    background-color: var(--white);
+    color: var(--dark-text);
+}
+
 .nav__btn {
-    background-color: #fff;
+    background-color: var(--white);
     width: 5rem;
     height: 5rem;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 .nav__btn-line {
+    display: block;
+    width: 3rem;
+    height: 0.3rem;
+    border-radius: 3rem;
+    background-color: var(--orange);
+    -webkit-border-radius: 3rem;
+    -moz-border-radius: 3rem;
+    -ms-border-radius: 3rem;
+    -o-border-radius: 3rem;
+    position: relative;
+    transition: all 200ms ease-in-out;
+    -webkit-transition: all 200ms ease-in-out;
+    -moz-transition: all 200ms ease-in-out;
+    -ms-transition: all 200ms ease-in-out;
+    -o-transition: all 200ms ease-in-out;
+}
 
+.nav__btn-line::before,
+.nav__btn-line::after {
+    content: ' ';
+    position: absolute;
+    width: 3rem;
+    height: 0.3rem;
+    border-radius: 3rem;
+    -webkit-border-radius: 3rem;
+    -moz-border-radius: 3rem;
+    -ms-border-radius: 3rem;
+    -o-border-radius: 3rem;
+    background-color: var(--orange);
+    transition: all 200ms ease-in-out;
+    -webkit-transition: all 250ms ease-in-out;
+    -moz-transition: all 250ms ease-in-out;
+    -ms-transition: all 250ms ease-in-out;
+    -o-transition: all 250ms ease-in-out;
+}
+.nav__btn-line::before {
+    top: -0.8rem;
+}
+
+.nav__btn-line::after {
+    top: 0.8rem;
+}
+
+.nav__btn--open .nav__btn-line {
+    background-color: transparent;
+}
+
+.nav__btn--open .nav__btn-line::before {
+    transform: translateY(8px) rotate(45deg);
+    -webkit-transform: translateY(10px) rotate(45deg);
+    -moz-transform: translateY(10px) rotate(45deg);
+    -ms-transform: translateY(10px) rotate(45deg);
+    -o-transform: translateY(10px) rotate(45deg);
+}
+
+.nav__btn--open .nav__btn-line::after {
+    transform: translateY(-8px) rotate(-45deg);
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    -moz-transform: translateY(-8px) rotate(-45deg);
+    -ms-transform: translateY(-8px) rotate(-45deg);
+    -o-transform: translateY(-8px) rotate(-45deg);
 }
