--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,15 @@
 
 
+@media (max-width: 380px) {
+    .header__content-title {
+        font-size: 4rem;
+    }
+}
 @media (min-width: 576px) {
    
 }
 @media (min-width: 768px) {
-    .nav__btn {
+    .nav__btn, .nav-menu {
         display: none;
     }
     .menu {
@@ -14,7 +19,10 @@
 }
 @media (min-width: 992px) {
     .nav__links {
-        display: block;
+        display: block;        
+    }
+    .header__content-caption  {
+        max-width: 50rem;
     }
 }
 @media (min-width: 1200px) {
