--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,9 @@
     --white: #fff;
     --white-grey-text: #D2D2D2;
     --dark-text: #3B3735;
+    --primary-font: "Roboto", Arial, Helvetica, sans-serif;
+    --primary-font-md: "Roboto Medium", Arial, Helvetica, sans-serif;
+    --secondary-font: "Archivo Black", Arial, Helvetica, sans-serif;
 }
 
 html {
@@ -19,7 +22,7 @@ html {
 body {
     line-height: 1.6;
     font-size: 1.6rem;
-    font-family: 'Roboto';
+    font-family: var(--primary-font), var(--secondary-font);
 }
 
 /*
@@ -77,7 +80,7 @@ a {
     align-items: center;
     margin-right: auto;
     margin-left: auto;
-    font-family: "Roboto Medium";
+    font-family: var(--primary-font-md);
 }
 
 /*
@@ -212,7 +215,7 @@ a {
 .nav-menu__title {
     color: var(--white);
     font-size: 2rem;
-    font-family: "Archivo Black";
+    font-family: var(--secondary-font);
     border-bottom: 1px solid var(--white);
     padding-bottom: 1rem;
     margin-bottom: 2rem;
@@ -307,7 +310,7 @@ a {
 
 .nav__link {
     color: var(--white);
-    font-family: "Roboto Medium";
+    font-family: var(--primary-font-md);
     margin-left: 2.5rem;
 
 }
@@ -429,7 +432,7 @@ a {
 
 }
 .header__content-title {
-    font-family: "Archivo Black";
+    font-family: var(--secondary-font);
     font-size: 4.5rem;
     line-height: 1.2;
     margin: 0 auto 3rem auto;
