--- a/css/app.css
+++ b/css/app.css
@@ -504,7 +504,7 @@ a {
     display: block;
     width: 10rem;
     height: 10rem;
-   
+    margin: auto;
 
 }
 .service__title {
@@ -528,7 +528,8 @@ a {
 
 }
 .destinations__logo {
-
+    width: 8rem;
+    height: 8rem;
 }
 .destinations_title {
     font-family: var(--secondary-font);
@@ -598,7 +599,7 @@ a {
 .destination__box-banner__price {
     background-color: var(--white);
     position: absolute;
-    bottom: -1rem;
+    bottom: -0.8rem;
     padding: 0.5rem 2rem;
     margin: 0 auto;
     width: 12rem;
@@ -615,6 +616,7 @@ a {
     font-family: var(--primary-font-md);
     color: var(--orange);
     text-align: center;
+    white-space: nowrap;
 
 }
 .destination__box-title {
@@ -655,6 +657,6 @@ a {
 }
 
 .destination__btn:hover {
-    color: var(--white);
+    color: var(--app-bg);
     background-color: var(--orange);
 }
