--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,9 @@
     .header__content-title {
         font-size: 4rem;
     }
+    .destinations_title {
+        font-size: 2.5rem;
+    }
 }
 @media (min-width: 576px) {
    
